--- a/estilos.css
+++ b/estilos.css
@@ -1,69 +1,45 @@
-p  {color: #e0f2de; font-family: Arial; text-align: center; text-justify: inter-word; font-size: 16px;}
-h1 {color: #263a35; font-family: Arial; text-align: center; text-justify: inter-word;}
-h2 {color: #e0f2de; font-family: Arial; text-align: center; text-justify: inter-word;}
-h3 {color: #e0f2de; font-family: Arial;}
+p  {color: #3a2c31; font-family: Calibri; text-align: center; text-justify: inter-word; font-size: 20px;}
+h1 {color: #3a2c31; font-family: Calibri; text-align: center; text-justify: inter-word; font-size: 46px;}
+h2 {color: #3a2c31; font-family: Calibri; text-align: center; text-justify: inter-word; font-size: 30px;}
+h3 {color: #3a2c31; font-family: Calibri; font-size: 24px;}
+h4 {color: #3a2c31; font-family: Calibri; font-size: 22px;}
+summary{color: #3a2c31; font-family: Calibri; font-size: 24px}
 
-.cab{
-  max-width: 800px; background-color: #36CFB8;
-  z-index: 3; position: sticky; top:20px;
-  padding: 10px;
-  border-width: 20px; border-radius: 20px 20px 20px 20px; -moz-border-radius: 20px 20px 20px 20px; -webkit-border-radius: 5px 5px 10px 10px;
-  h1  {margin-top: 0px; margin-bottom: 5px;}
-  p{font-size: 20px;}
-
-  a{color:#263a35; font-family: Arial;}
-  a:hover{color: #e0f2de;}
-}
-nav{
-  font-family: Arial;
-  text-align: center;
-  margin:10px 10px 10px;
-  column-count: 3;
-  font-size: 20px;
-  a{
-    color:#e0f2de;
-  }
-  a:hover{
-    color:#263a35;
-  }
-}
-
-body, html { 
-  height: 1000;
-}
 body{
-  background-color: #2F949F;
+  background-color: #7ecfb7;
   background-repeat: repeat-y;
 
   max-width: 800px;
   margin: 20px auto;
 }
+body, html { 
+  height: 1000;
+}
 
-footer{
-  background-color: #36CFB8;
-  column-count: 3;
-  text-align: center;
-  
-  height: 150px;
-  width: 1000px;
-  margin: 20px auto;
-  max-width: 800px;
+video {
+  position: fixed;
+  top: 50%; left: 50%;
+  min-width: 100%; min-height: 100%;
+  width: auto; height: auto;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.20;
+  filter: hue-rotate(60deg);
+}
 
-  border-radius: 20px 20px 20px 20px;
-  -moz-border-radius: 20px 20px 20px 20px;
-  -webkit-border-radius: 10px 10px 5px 5px;
-  
-  h3{
-    color: #263a35;
-    font-family: Arial;
-  }
-  .pie{
-    color:#263a35;
-    font-family: Arial;
-  }
-  .pie:hover{
-    color: #e0f2de;
-  }
+.cab{
+  width: 100%; max-width: 800px; height: 70px;
+  background-color: #ccebdc;
+  display: flex; 
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  gap: 1vw;
+  z-index: 3; position: fixed; top:0px;
+  padding: 20px;
+  border-radius: 0px 0px 10px 10px;
+  a {color: #3a2c31; font-family: Calibri; font-size: 25px; gap: 33vw; text-decoration:none;}
+  a:hover{color: #c9b5bc;}
 }
 
 .cuadrao{
@@ -71,7 +47,7 @@ footer{
   height: 100px;
   display: inline-block;
   padding: 19px;
-  background: #27A391;
+  background: #392c3a;
   text-align: center;
   vertical-align:top;
   
@@ -80,13 +56,12 @@ footer{
   font-family: Arial;
   
   border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-
-  h2{color:#e0f2de}
-  p{visibility: hidden; text-align: justify;}
-  a{color:#e0f2de}
+  
+  h3{color:#ccebdc}
+  p{color:#ccebdc; visibility: hidden; text-align: justify;}
+  a{color:#ccebdc}
   img{visibility: hidden;}
+  summary{color:#ccebdc; visibility: hidden;}
 
   transition-property: all;
   transition-duration: 0.75s;
@@ -96,36 +71,28 @@ footer{
     padding: 50px 16px; height: auto;
     p{visibility: visible; animation: fadein 0.5s;}
     img{visibility: visible; animation: fadein 0.5s}
+    summary{visibility: visible; animation: fadein 0.75s;}
 }
-
 @keyframes fadein {0% {opacity: 0;}50% {opacity: 0.5;}100% {opacity: 1;}}
 
-  .cuadradote{
-    width: 730px;
-    text-align: center;
-  display: inline-block;
-  padding: 19px;
-  background: #BFF0E9;
+footer{
+  background-color: #ccebdc;
+  column-count: 2;
   text-align: center;
+  display: inline-block;
   
-  
-  margin: 15px;
-  float: none;
-  font-family: Arial;
-  
-  border-radius: 20px 20px 20px 20px;
-  -moz-border-radius: 20px 20px 20px 20px;
-  -webkit-border-radius: 10px 10px 10px 10px;
+  height: 150px; width: 1000px;
+  margin: 20px auto;
+  max-width: 800px;
 
-  transition-property: all;
-  transition-duration: 0.5s;
+  border-radius: 10px 10px 5px 5px;
+ 
+  h3{color: #3a2c31; font-family: Calibri;}
+  .pie{color:#3a2c31;font-family: Calibri;}
+  .pie:hover{color: #c9b5bc;}
+}
 
-  h2{color: #263a35;}
-  p{color: #263a35; visibility: hidden;}
-  a{color:#263a35}
-  
-  }
-  .cuadradote:hover{
-    padding: 100px 19px;
-    p{visibility: visible;}
-  }
+.sub{
+  position: fixed;
+  bottom: 20px; right: 20px; z-index: 3;
+}
